--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+Version 2.31.91
+~~~~~~~~~~~~~~~
+Released: 2010-08-31
+
+* Translations
+ - Added Punjabi Translation (A S Alam)
+ - Added Serbian translation (Милош Поповић)
+ - Added Traditional Chinese translation (Hong Kong and Taiwan) (Chao-Hsiung Liao)
+ - Added Greek translation for gnome-color-management (Michael Kotsarinis)
+ - Added Greek translation for gnome-color-manager documentation (Michael Kotsarinis)
+ - Updated Danish translation (Ask H. Larsen)
+ - Updated French translation (Claude Paroz)
+ - Updated Galician translations (Fran Diéguez)
+ - Updated Hebrew translation (Yaron Shahrabani)
+ - Updated Portuguese translation (António Lima)
+ - Updated Slovenian translation (Matej Urbančič)
+ - Updated Spanish translation (Jorge González)
+ - Update Simplified Chinese translation (Yinghua Wang)
+
+* Bugfix:
+ - Use a new application icon (Hylke Bons)
+
 Version 2.31.6
 ~~~~~~~~~~~~~~
 Released: 2010-08-06
