Updated Norwegian bokmål translation

--- a/po/nb.po
+++ b/po/nb.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager 2.31.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-09-02 21:17+0200\n"
-"PO-Revision-Date: 2010-09-02 21:38+0200\n"
+"POT-Creation-Date: 2010-09-02 22:06+0200\n"
+"PO-Revision-Date: 2010-09-02 22:11+0200\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian bokmål <i18n-nb@lister.ping.uio.no>\n"
 "Language: \n"
@@ -157,7 +157,7 @@ msgstr ""
 
 #: ../policy/org.gnome.color.policy.in.h:1
 msgid "Authentication is required to install the color profile for all users"
-msgstr ""
+msgstr "Autentisering kreves for å installere fargeprofilen for alle brukere"
 
 #. SECURITY:
 #. - Normal users require admin authentication to install files system
@@ -297,12 +297,12 @@ msgstr "Sett opp skjerm"
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:1364
 msgid "Setting up display device for use…"
-msgstr "Setter opp skjermenhet for bruk..."
+msgstr "Setter opp skjermenhet for bruk…"
 
 #. TRANSLATORS: title, patches are specific colors used in calibration
 #: ../src/gcm-calibrate-argyll.c:1463
 msgid "Printing patches"
-msgstr ""
+msgstr "Skriver ut endringer"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:1466
@@ -319,7 +319,9 @@ msgstr "Vent på at blekket skal tørke"
 msgid ""
 "Please wait a few minutes for the ink to dry. Profiling damp ink will "
 "produce a poor profile and may damage your color measuring instrument."
-msgstr "Vent noen minutter på at inket skal tørke. Profilering med fuktig blekk vil resultere i en dårlig profil og kan skade måleinstrumentet."
+msgstr ""
+"Vent noen minutter på at inket skal tørke. Profilering med fuktig blekk vil "
+"resultere i en dårlig profil og kan skade måleinstrumentet."
 
 #. TRANSLATORS: the supplied image contains an alpha channel which we have to strip out
 #: ../src/gcm-calibrate-argyll.c:1946
@@ -365,14 +367,17 @@ msgstr "Vennligst koble til instrumentet"
 msgid ""
 "Please attach the measuring instrument to the center of the screen on the "
 "gray square like the image below."
-msgstr "Vennligst koble til måleinstrumentet midt på skjermen på den grå firkanten som bildet under."
+msgstr ""
+"Vennligst koble til måleinstrumentet midt på skjermen på den grå firkanten "
+"som bildet under."
 
 #. TRANSLATORS: dialog message, ask user to attach device
 #: ../src/gcm-calibrate-argyll.c:2125
 msgid ""
 "Please attach the measuring instrument to the center of the screen on the "
 "gray square."
-msgstr "Vennligst koble til måleinstrumentet midt på skjermen på den grå firkanten."
+msgstr ""
+"Vennligst koble til måleinstrumentet midt på skjermen på den grå firkanten."
 
 #. TRANSLATORS: button text
 #: ../src/gcm-calibrate-argyll.c:2138 ../src/gcm-calibrate-argyll.c:2192
@@ -397,7 +402,8 @@ msgstr "Vennligst konfigurer instrumentet"
 #: ../src/gcm-calibrate-argyll.c:2179
 msgid ""
 "Please set the measuring instrument to calibration mode like the image below."
-msgstr "Vennligst sett enheten i kalibreringsmodus som vist i bildet under."
+msgstr ""
+"Vennligst sett måleinstrumentet i kalibreringsmodus som vist i bildet under."
 
 #. TRANSLATORS: this is when the user has to change a setting on the sensor
 #: ../src/gcm-calibrate-argyll.c:2182
@@ -409,14 +415,18 @@ msgstr "Vennligst sett målingsinstrumentet i kalibreringsmodus."
 msgid ""
 "Please set the measuring instrument to screen mode like the image below, and "
 "ensure it is attached to the screen."
-msgstr "Vennligst sett enheten i skjermmodus som vist i bildet under og sjekk at det er koblet til skjermen."
+msgstr ""
+"Vennligst sett enheten i skjermmodus som vist i bildet under og sjekk at det "
+"er koblet til skjermen."
 
 #. TRANSLATORS: this is when the user has to change a setting on the sensor
 #: ../src/gcm-calibrate-argyll.c:2234
 msgid ""
 "Please set the measuring instrument to screen mode, and ensure it is "
 "attached to the screen."
-msgstr "Vennligst sett måleinstrumentet i skjermmodus og sjekk at det er koblet til skjermen."
+msgstr ""
+"Vennligst sett måleinstrumentet i skjermmodus og sjekk at det er koblet til "
+"skjermen."
 
 #. TRANSLATORS: title, the calibration failed
 #: ../src/gcm-calibrate-argyll.c:2305 ../src/gcm-calibrate-argyll.c:2353
@@ -592,7 +602,9 @@ msgstr "Kunne ikke gjenkjenne skjermtype"
 msgid ""
 "Please indicate if the screen you are trying to profile is an LCD, CRT or a "
 "projector."
-msgstr "Vennligst oppgi om skjermen du prøver å profilere er av type LCD, CRT, eller en prosjektor."
+msgstr ""
+"Vennligst oppgi om skjermen du prøver å profilere er av type LCD, CRT, eller "
+"en prosjektor."
 
 #. TRANSLATORS: title, the hardware calibration device does not support projectors
 #: ../src/gcm-calibrate.c:419
@@ -883,14 +895,17 @@ msgstr "Innføring i skjermkalibrering"
 #: ../src/gcm-calibrate-manual.c:222
 msgid ""
 "This dialog will help calibrate your display and create a custom ICC profile."
-msgstr "Denne dialogen vil hjelpe deg med å kalibrere din skjerm og å lage en egendefinert ICC-profil."
+msgstr ""
+"Denne dialogen vil hjelpe deg med å kalibrere din skjerm og å lage en "
+"egendefinert ICC-profil."
 
 #. TRANSLATORS: message text, telling the user they are in for the long haul
 #: ../src/gcm-calibrate-manual.c:225
 msgid ""
 "The calibration will involve several steps so that an accurate profile can "
 "be obtained."
-msgstr "Kalibreringen går over flere steg slik at en nøyaktig profil kan utarbeides."
+msgstr ""
+"Kalibreringen går over flere steg slik at en nøyaktig profil kan utarbeides."
 
 #. TRANSLATORS: message text, this is a lie. It will take more than a few minutes, but we don't want to scare the hapless user
 #: ../src/gcm-calibrate-manual.c:228
@@ -934,7 +949,8 @@ msgstr "Sammendrag"
 msgid ""
 "This display is now calibrated. You can change the current profile using the "
 "Color Profiles program."
-msgstr "Skjermen er nå kalibrert. Du kan bytte profil med fargeprofilprogrammet."
+msgstr ""
+"Skjermen er nå kalibrert. Du kan bytte profil med fargeprofilprogrammet."
 
 #. TRANSLATORS: error message
 #: ../src/gcm-client.c:1103
@@ -969,7 +985,7 @@ msgstr "Navn på skjerm"
 #. TRANSLATORS: this is debugging output for the supplied EDID file
 #: ../src/gcm-dump-edid.c:80
 msgid "Vendor name"
-msgstr "Navn på produsent"
+msgstr "Navn på leverandør"
 
 #. TRANSLATORS: this is debugging output for the supplied EDID file
 #: ../src/gcm-dump-edid.c:85
@@ -1165,12 +1181,12 @@ msgstr "Det finnes ingen ICC-profiler for denne enhetstypen"
 #. TRANSLATORS: this is the rendering intent of the output
 #: ../src/gcm-inspect.c:427
 msgid "Rendering intent (display):"
-msgstr ""
+msgstr "Lager profilen"
 
 #. TRANSLATORS: this is the rendering intent of the printer
 #: ../src/gcm-inspect.c:430
 msgid "Rendering intent (softproof):"
-msgstr ""
+msgstr "Lager profilen"
 
 #. TRANSLATORS: this is filename of the default colorspace
 #: ../src/gcm-inspect.c:433
@@ -1300,7 +1316,7 @@ msgstr "Ingen"
 #. TRANSLATORS: this is where the user can click and import a profile
 #: ../src/gcm-prefs.c:184
 msgid "Other profile…"
-msgstr "Annen profil …"
+msgstr "Annen profil..."
 
 #. TRANSLATORS: could not calibrate
 #: ../src/gcm-prefs.c:318
@@ -1321,7 +1337,7 @@ msgstr "Slett profilen permanent?"
 #: ../src/gcm-prefs.c:470
 msgid ""
 "Are you sure you want to remove this profile from your system permanently?"
-msgstr "Er du sikker på at du vil fjerne denne profilen fra systemet permanent?"
+msgstr ""
 
 #. TRANSLATORS: button, delete a profile
 #: ../src/gcm-prefs.c:473
@@ -1345,12 +1361,14 @@ msgstr "Installer manglende kalibrerings- og profileringsprogramvare?"
 #. TRANSLATORS: dialog message saying the argyllcms is not installed
 #: ../src/gcm-prefs.c:691
 msgid "Calibration and profiling software is not installed on this computer."
-msgstr "Kalibrerings- og profileringsprogramvare er ikke installert på denne datamaskinen."
+msgstr ""
+"Kalibrerings- og profileringsprogramvare er ikke installert på denne "
+"datamaskinen."
 
 #. TRANSLATORS: dialog message saying the color targets are not installed
 #: ../src/gcm-prefs.c:693
 msgid "These tools are required to build color profiles for devices."
-msgstr "Disse verktøyene kreves for å lage fargeprofiler for enheter."
+msgstr ""
 
 #. TRANSLATORS: dialog message, asking if it's okay to install it
 #: ../src/gcm-prefs.c:695
@@ -1416,7 +1434,8 @@ msgstr "Kan ikke profilere: Måleinstrumentet er ikke koblet til"
 #: ../src/gcm-prefs.c:1125
 msgid ""
 "Cannot profile: The measuring instrument does not support printer profiling"
-msgstr "Kan ikke profilere: Måleinstrumentet støtter ikke profilering av skrivere"
+msgstr ""
+"Kan ikke profilere: Måleinstrumentet støtter ikke profilering av skrivere"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1132
@@ -1737,9 +1756,8 @@ msgstr "Normal"
 
 #. The user is trying to create an ICC profile of a printer that is connected to the computer
 #: ../data/gcm-calibrate.ui.h:20
-#, fuzzy
 msgid "Profile locally attached printer"
-msgstr "Profiler som skal vises"
+msgstr "Profiler lokalt tilknyttet skriver"
 
 #: ../data/gcm-calibrate.ui.h:21
 msgid "Projector"
@@ -1773,7 +1791,7 @@ msgstr "CMYK:"
 
 #: ../data/gcm-prefs.ui.h:8
 msgid "Close this dialog"
-msgstr "Lukk dette vinduet"
+msgstr "Lukk denne dialogen"
 
 #. Section heading for device profile settings
 #: ../data/gcm-prefs.ui.h:11
@@ -1792,12 +1810,12 @@ msgstr "Kontrast:"
 #. This is a button to calibrate the device by creating an ICC profile file using a hardware device or a reference image
 #: ../data/gcm-prefs.ui.h:16
 msgid "Create _Profile for Device"
-msgstr "Lag _profil for enhet"
+msgstr "Lag en _profil for denne enheten"
 
 #. When the profile was created
 #: ../data/gcm-prefs.ui.h:18
 msgid "Created:"
-msgstr "Laget:"
+msgstr "Opprettet:"
 
 #. Tab title, system wide defaults to use
 #: ../data/gcm-prefs.ui.h:20
@@ -1812,7 +1830,9 @@ msgstr "Slett valgt fargeprofil"
 msgid ""
 "Delete the disconnected device - if you reconnect the device it will "
 "reappear in the list"
-msgstr "Slett frakoblet enhet - den vil dukke opp i listen hvis du kobler til enheten igjen"
+msgstr ""
+"Slett frakoblet enhet - den vil dukke opp i listen hvis du kobler til "
+"enheten igjen"
 
 #. Section heading for device settings
 #: ../data/gcm-prefs.ui.h:24
@@ -1822,7 +1842,7 @@ msgstr "Enhet"
 #. The manufacturer of the profile
 #: ../data/gcm-prefs.ui.h:26
 msgid "Device manufacturer:"
-msgstr "Enhetens produsent:"
+msgstr "Produsent av enhet:"
 
 #. The manufacturer of the profile
 #: ../data/gcm-prefs.ui.h:28
@@ -1841,7 +1861,7 @@ msgstr "Enheter"
 #. If the profile contains a display correction table
 #: ../data/gcm-prefs.ui.h:34
 msgid "Display correction:"
-msgstr "Skjermkorrigering:"
+msgstr "Skjermkorrigering"
 
 #. What mode to use for display rendering intent
 #: ../data/gcm-prefs.ui.h:36
@@ -1851,7 +1871,7 @@ msgstr "Skjerm:"
 #. The file size in bytes of the profile
 #: ../data/gcm-prefs.ui.h:38
 msgid "File size:"
-msgstr "Filstørrelse:"
+msgstr "Filstørrelse"
 
 #. The basename (the last section of the filename) of the profile
 #: ../data/gcm-prefs.ui.h:40
@@ -1896,7 +1916,7 @@ msgstr "Åpne dokumentasjonen"
 
 #: ../data/gcm-prefs.ui.h:53
 msgid "Profile Graphs"
-msgstr "Profilgrafer"
+msgstr "Grafer for profil"
 
 #. The type of profile, e.g. display, scanner, etc.
 #: ../data/gcm-prefs.ui.h:55
@@ -1930,7 +1950,7 @@ msgstr "Lagre disse profilene for alle brukere"
 #. The serial number of the device
 #: ../data/gcm-prefs.ui.h:65
 msgid "Serial number:"
-msgstr "Serienummer:"
+msgstr ""
 
 #: ../data/gcm-prefs.ui.h:66
 msgid ""
@@ -1977,11 +1997,11 @@ msgstr "Arbeidsområde"
 #. This is a button to add a virtual device
 #: ../data/gcm-prefs.ui.h:77
 msgid "_Add Device"
-msgstr "_Legg til enhet"
+msgstr "Legg til _enhet"
 
 #: ../data/gcm-prefs.ui.h:78
 msgid "_Apply display correction"
-msgstr "Sl_å på skjermkorrigering"
+msgstr "_Bruk skjermkorrigering"
 
 #. This is a button to delete the saved or virtual device
 #: ../data/gcm-prefs.ui.h:80
@@ -2003,7 +2023,7 @@ msgstr "Gjør til _forvalg"
 #. This resets the device to it's defaults, and removes any user tweaked settings.
 #: ../data/gcm-prefs.ui.h:85
 msgid "_Reset to defaults"
-msgstr "Sett til fo_rvalg"
+msgstr "_Sett til forvalg"
 
 #: ../data/gcm-prefs.ui.h:86
 msgid "_Set profile for color managed applications"
