Updated Slovenian translation

--- a/po/sl.po
+++ b/po/sl.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-color-manager\n"
-"POT-Creation-Date: 2010-09-04 07:37+0000\n"
-"PO-Revision-Date: 2010-09-04 19:55+0100\n"
+"POT-Creation-Date: 2010-09-04 17:57+0000\n"
+"PO-Revision-Date: 2010-09-04 20:26+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian <gnome-si@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -79,11 +79,11 @@ msgstr "Izbor atoma _ICC_PROFILA za programe."
 
 #: ../data/gnome-color-manager.schemas.in.h:7
 msgid "Show the fine tuning controls for display devices."
-msgstr ""
+msgstr "Pokaži tipke podrobnega nastavljanja naprav za prikazovanje."
 
 #: ../data/gnome-color-manager.schemas.in.h:8
 msgid "The CMYK profile filename to be used by applications by default."
-msgstr ""
+msgstr "Datoteka profila CMYK za privzeto programsko uporabo."
 
 #: ../data/gnome-color-manager.schemas.in.h:9
 msgid "The RGB profile filename to be used by applications by default."
